# chromic

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: check.yml  release.yml  scheduled.yml  test.yml
src/: cli.rs  command.rs  file.rs  graph.rs  gui.rs  main.rs  mvr.rs  update.rs
src/cli/: mod.rs  parse.rs  range.rs
src/cli/parse/: range.rs
src/graph/: data_types.rs
src/nodes/: dmx_output.rs  fixture.rs  mod.rs  static_colour.rs  universe.rs
