[package]
name = "chromic"
version = "0.0.1"
edition = "2021"


[dependencies]
anyhow = "1.0.70"
petgraph = { version = "0.6.3", features = ["stable_graph"] }
smol_str = "0.2.0"

# Needed for GDTF parsing
opengdtf = { git = "https://github.com/Firionus/opengdtf"}
nom = "7.1.3"
winit = "0.28.3"
wgpu = "0.15.1"
cfg-if = "1.0.0"
env_logger = "0.10.0"
log = "0.4.17"
pollster = "0.3.0"
rand = "0.8.5"
